Fix documentation swag and minor fixes
